.provarCaches/00D5f000005vwGkEAI/objects/rstkf__povclasscmpno__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_povclasscmpno</customHelpPage>
    <description>povclasscmpno__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__povclasscmpno_povclass__r.rstk__povclass_class__c + rstkf__povclasscmpno_glcmp__r.rstkf__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__povclasscmpno_povclass__r.rstk__povclass_class__c + &quot;(&quot; + rstkf__povclasscmpno_glcmp__r.Name + &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__povclasscmpno_apusrno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Responsible AP User responsible for this Vendor Class within the given Financial Company</inlineHelpText>
        <label>AP User</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Vendor Class Companies</relationshipLabel>
        <relationshipName>Vendor_Class_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__povclasscmpno_bankacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The default Bank Account used for payments for Vendors associated with this Vendor Class and Financial Company</inlineHelpText>
        <label>Bank Account Name</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Vendor Class Companies</relationshipLabel>
        <relationshipName>Vendor_Class_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__povclasscmpno_glaccruedapacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Accrued AP Account used for Payables Transactions for Vendors associated with this Vendor Class and Financial Company</inlineHelpText>
        <label>Accrued AP Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Vendor Class Companies</relationshipLabel>
        <relationshipName>Vendor_Class_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__povclasscmpno_glapacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Accounts Payable Account used for Payables Transactions for Vendors associated with this Vendor Class and Financial Company</inlineHelpText>
        <label>Accounts Payable Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Vendor Class Companies (Accounts Payable Account)</relationshipLabel>
        <relationshipName>Vendor_Class_Companies_AP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__povclasscmpno_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Financial Company that the given Vendor Class is associated</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Vendor Class Companies</relationshipLabel>
        <relationshipName>Vendor_Class_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__povclasscmpno_glexpenseacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The GL Expense Account used for Payables Transactions for Vendors associated with this Vendor Class and Financial Company</inlineHelpText>
        <label>GL Expense Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Vendor Class Companies (GL Expense Account)</relationshipLabel>
        <relationshipName>Vendor_Class_Companies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__povclasscmpno_povclass__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Vendor Class established for this Financial Company</inlineHelpText>
        <label>Vendor Class</label>
        <referenceTo>rstk__povclass__c</referenceTo>
        <relationshipLabel>Vendor Class Companies</relationshipLabel>
        <relationshipName>Vendor_Class_Companies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Vendor Class Company</label>
    <listViews>
        <fullName>rstkf__RS_Vendor_Class_Companies</fullName>
        <columns>NAME</columns>
        <columns>rstkf__povclasscmpno_glcmp__c</columns>
        <columns>rstkf__povclasscmpno_povclass__c</columns>
        <columns>rstkf__povclasscmpno_glapacct__c</columns>
        <columns>rstkf__povclasscmpno_glaccruedapacct__c</columns>
        <columns>rstkf__povclasscmpno_bankacct__c</columns>
        <columns>rstkf__povclasscmpno_glexpenseacct__c</columns>
        <columns>rstkf__povclasscmpno_apusrno__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Vendor Class Companies</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Vendor_Class_Companies_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__povclasscmpno_glcmp__c</columns>
        <columns>rstkf__povclasscmpno_povclass__c</columns>
        <columns>rstkf__povclasscmpno_glapacct__c</columns>
        <columns>rstkf__povclasscmpno_glaccruedapacct__c</columns>
        <columns>rstkf__povclasscmpno_bankacct__c</columns>
        <columns>rstkf__povclasscmpno_glexpenseacct__c</columns>
        <columns>rstkf__povclasscmpno_apusrno__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Vendor Class Companies - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Vendor Class Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Class Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>